Endpoints patterns added / Swagger auto-documentation updated
