# app/routes/admin/Auth/router.js
@@ -1,40 +1,9 @@
 const router = require('express').Router();
 
-// Create a new user
-router.post('/register', (req, res) => {
-    // #swagger.tags = ['Admin']
-    const { username, password } = req.body;
-    // Insert the new user into your database here
-    // Send a response back to the client
-    res.json({ message: 'User registered successfully' });
-});
-
-// Read user data
-router.get('/login', (req, res) => {
-    // #swagger.tags = ['Admin']
-    const { username, password } = req.body;
-    // Fetch the user from your database here
-    // Send the user data back to the client
-    res.json({ message: 'User data fetched successfully' });
-});
-
-// Update user data
-router.put('/update', (req, res) => {
-    // #swagger.tags = ['Admin']
-    const { username, password } = req.body;
-    // Update the user in your database here
-    // Send a response back to the client
-    res.json({ message: 'User updated successfully' });
-});
-
-
-// Delete a user
-router.delete('/delete', (req, res) => {
-    // #swagger.tags = ['Admin']
-    const { username } = req.body;
-    // Delete the user from your database here
-    // Send a response back to the client
-    res.json({ message: 'User deleted successfully' });
+// Secure login system for admin users.
+router.post('/login', (req, res) => {
+    // #swagger.tags = ['Admin / Auth']
+    res.send('Admin login');
 });
 
 module.exports = router;
